# AMF

./: LICENSE.txt  README.md  SUPERSECURE.locking-mechanism  meson.build
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  general-question.md
.github/workflows/: publish-header.yml
amf/: .gitattributes  .gitignore  meson.build
amf/doc/: AMF_API_Reference.md  AMF_Display_Capture_API.md  AMF_FRC_API.md  AMF_HQ_Scaler_API.md  AMF_SDK_EULA.rtf  AMF_VQ_Enhancer_API.md  AMF_Video_Converter_API.md  AMF_Video_Decode_API.md  AMF_Video_Encode_API.md  AMF_Video_Encode_AV1_API.md  README.md  (+4 more)
amf/public/include/: meson.build
amf/public/include/components/: AMFXInput.h  AudioCapture.h  ColorSpace.h  Component.h  ComponentCaps.h  DisplayCapture.h  FFMPEGAudioConverter.h  FFMPEGAudioEncoder.h  FFMPEGFileDemuxer.h  FFMPEGFileMuxer.h  FRC.h  HQScaler.h  PreAnalysis.h  VQEnhancer.h  VideoConverter.h  VideoDecoderUVD.h  VideoEncoderAV1.h  VideoEncoderHEVC.h  VideoEncoderVCE.h  ZCamLiveStream.h
amf/public/include/core/: AudioBuffer.h  Buffer.h  Compute.h  ComputeFactory.h  Context.h  D3D12AMF.h  Data.h  Debug.h  Factory.h  Interface.h  Plane.h  Platform.h  PropertyStorage.h  PropertyStorageEx.h  Result.h  Surface.h  Trace.h  Variant.h  Version.h  VulkanAMF.h
common/: .gitattributes  AMFFactory.cpp  AMFMath.h  AMFSTL.cpp  AMFSTL.h  ByteArray.h  DataStream.h  DataStreamFactory.cpp  DataStreamFile.cpp  DataStreamFile.h  DataStreamMemory.h  IOCapsImpl.cpp  IOCapsImpl.h  InterfaceImpl.h  ObservableImpl.h  PropertyStorageExImpl.h  PropertyStorageImpl.h  Thread.h  TraceAdapter.h
(+668 files in other folders)
