headers_components = files(
  'components/Ambisonic2SRenderer.h',
  'components/AudioCapture.h',
  'components/Capture.h',
  'components/ChromaKey.h',
  'components/ColorSpace.h',
  'components/Component.h',
  'components/ComponentCaps.h',
  'components/CursorCapture.h',
  'components/DisplayCapture.h',
  'components/FFMPEGAudioConverter.h',
  'components/FFMPEGAudioDecoder.h',
  'components/FFMPEGAudioEncoder.h',
  'components/FFMPEGComponents.h',
  'components/FFMPEGFileDemuxer.h',
  'components/FFMPEGFileMuxer.h',
  'components/FFMPEGVideoDecoder.h',
  'components/MediaSource.h',
  'components/PreAnalysis.h',
  'components/PreProcessing.h',
  'components/VideoCapture.h',
  'components/VideoConverter.h',
  'components/VideoDecoderUVD.h',
  'components/VideoEncoderHEVC.h',
  'components/VideoEncoderVCE.h',
  'components/VideoStitch.h',
  'components/ZCamLiveStream.h',
)

headers_core = files(
  'core/AudioBuffer.h',
  'core/Buffer.h',
  'core/Compute.h',
  'core/ComputeFactory.h',
  'core/Context.h',
  'core/CurrentTime.h',
  'core/Data.h',
  'core/Debug.h',
  'core/Dump.h',
  'core/Factory.h',
  'core/Interface.h',
  'core/Plane.h',
  'core/Platform.h',
  'core/PropertyStorage.h',
  'core/PropertyStorageEx.h',
  'core/Result.h',
  'core/Surface.h',
  'core/Trace.h',
  'core/Variant.h',
  'core/Version.h',
  'core/VulkanAMF.h',
)

install_headers(headers_components, subdir: 'AMF/components')
install_headers(headers_core, subdir: 'AMF/core')